CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-05 05:51:07
+lastsearch = 2024-08-05 13:38:56
 
 [scholar.google.com]
 match = -43.8%%
@@ -87,9 +87,9 @@ title = Phim chưa chiếu đã gây sốc vì cảnh nóng của học sinh ...
 url = https://gamek.vn/phim-chua-chieu-da-gay-soc-vi-canh-nong-cua-hoc-sinh-netizen-nem-da-gay-gat-phan-cam-qua-roi-day-178240604102939863.chn
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [www.facebook.com]
 match = 6.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -106.2%%
-title = HR - TUYỂN DỤNG | ⛩️⛩️⛩️ 𝐇Ồ𝐍𝐆 𝐓𝐑À 𝐍𝐆Ô 𝐆𝐈𝐀 ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8413850388638934/
+match = -193.8%%
+title = Thăng hạng vóc dáng, đón tháng 8 cực "SLAY" ✨ Sale lớn ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8419674021389904/
 
 [shopee.vn]
 match = -75.0%%
@@ -397,9 +397,9 @@ title = Đối Chiếu Đơn Vị Hành Chính
 url = https://danhmuchanhchinh.gso.gov.vn/Doi_Chieu_Moi.aspx
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 05/08: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0508-tam-ly-than-trong-bao-trum-thi-truong-585-1216444.htm
 
 [nongnghiep.vn]
 match = -12.5%%
@@ -672,9 +672,9 @@ title = Đồng tính luyến ái và Hôn nhân đồng tính
 url = https://tgpsaigon.net/bai-viet/dong-tinh-luyen-ai-va-hon-nhan-dòng-tính-75232
 
 [thoibaotaichinhvietnam.vn]
-match = -187.5%%
-title = Central Retail giảm giá đến 49%% gần 1.000 sản phẩm ...
-url = https://thoibaotaichinhvietnam.vn/central-retail-giam-gia-den-49-gan-1000-san-pham-phuc-vu-nam-hoc-moi-155962.html
+match = -206.2%%
+title = Cảnh báo chiêu trò lừa đảo bán thuốc đặc trị trên mạng xã ...
+url = https://thoibaotaichinhvietnam.vn/canh-bao-chieu-tro-lua-dao-ban-thuoc-dac-tri-tren-mang-xa-hoi-156442.html
 
 [baonghean.vn]
 match = -175.0%%
@@ -730,4 +730,9 @@ url = https://www.binhduong.gov.vn/tin-tuc/2024/08/908-giao-ban-bao-chi-6-thang-
 match = -193.8%%
 title = Chúa nhật 18 Thường niên năm B - Bánh đích thực (Ga 6 ...
 url = https://loichuahomnay.vn/loi-chua-ngay-04082024-chua-nhat-18-thuong-nien-nam-b-banh-dich-thuc-ga-624-35
+
+[nguoihanoi.vn]
+match = -181.2%%
+title = Chung khảo giải thưởng “Nhà giáo Đống Đa tâm huyết ...
+url = https://nguoihanoi.vn/chung-khao-giai-thuong-nha-giao-dong-da-tam-huyet-sang-tao-nam-2024-86048.html
 
