--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-05 06:14:46
+lastsearch = 2024-08-05 13:49:08
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = 80.8%%
+title = Đệm lò xo Everon Pocket Pops
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = 69.2%%
-title = Nệm lò xo túi Everon Pocket Pops
-url = https://nemhana.com/nem-lo-xo-tui-everon-pocket-pops/
+match = 30.8%%
+title = Nệm lò xo Everon Pocket Premium - Nệm Hana
+url = https://nemhana.com/nem-lo-xo-everon-pocket-premium/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -77,8 +77,8 @@ title = Đệm lò xo Everon Pocket Pops
 url = https://dailyeveron.vn/dem-lo-xo-everon/dem-lo-xo-everon-pocket-pops.html
 
 [shopee.vn]
-match = -15.4%%
-title = nem lo xo Everon giá tốt Tháng 7, 2024 | Mua ngay
+match = -11.5%%
+title = nem lo xo Everon giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=nem lo xo Everon
 
 [dailynem.vn]
