--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-05 13:19:18
+lastsearch = 2024-08-05 13:45:28
 
 [www.kymdan.com]
-match = -333.3%%
-title = Kymdan
-url = https://www.kymdan.com/home.do?lang=en
+match = 4.2%%
+title = Bộ ga trải giường Kymdan
+url = https://www.kymdan.com/danh-muc/drap-trai-giuong
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
 url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
-match = 18.5%%
-title = bộ sản phẩm everon epc24041
-url = https://yeshomebedding.com/bo-san-pham-everon-epc24041
+match = 11.5%%
+title = bộ chăn ga everon ept24034
+url = https://yeshomebedding.com/bo-san-pham-everon-ept24034
 
 [www.lazada.vn]
 match = -15.6%%
