--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-05 12:37:45
+lastsearch = 2024-08-05 13:46:28
 
 [shopee.vn]
-match = -171.4%%
-title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
-url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
+match = -214.3%%
+title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
 
 [mungthienmetta.com]
 match = -185.7%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/mung-chup-tu-bung.html
 [www.lazada.vn]
 match = -164.3%%
 title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOooY7eG4Rp-lO2Yw9rZMcB8iqIp4sblKzb4TI_r7QFaUDKifM5-D
 
 [www.mungbaobao.com]
 match = -214.3%%
