--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-08-05 11:36:45
+lastsearch = 2024-08-05 13:39:59
 
 [www.khanbongcaocap.com.vn]
-match = -78.9%%
-title = Thảm chân Khách Sạn kích thước 42-45-50 cm, Trọng ...
-url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
+match = 0.0%%
+title = Combo 03 Khăn Thảm Chùi Chân Khách Sạn
+url = https://www.khanbongcaocap.com.vn/tham-chui-chan
 
 [www.lazada.vn]
 match = -36.8%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOoqok7gPSugA-_ZU2O8MrMkfGP4GO5gc-wKoAgg-J161kwlCLFEI
 
 [falcon.com.vn]
 match = -105.3%%
