--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-05 05:36:56
+lastsearch = 2024-08-05 13:39:38
 
 [www.tiktok.com]
-match = -187.5%%
-title = Got my glam done by the one & only @madebymitchell ...
-url = https://www.tiktok.com/@hudabeauty/video/7382275079893273886
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [digitalmaine.com]
 match = -75.0%%
