--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-05 12:51:09
+lastsearch = 2024-08-05 13:42:41
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Điệp Xuân Vỏ gối EP1727 45x65
-url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
+match = 19.0%%
+title = Vỏ gối EP1727 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html?srsltid=AfmBOoq9Kf6g-nl5__YBv34zg_MJqs34HJhRz-FiaFx-hP6GmCXds43M
 
 [tiki.vn]
 match = -81.0%%
