--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-05 05:34:52
+lastsearch = 2024-08-05 13:51:21
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Lo
 url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = -72.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-n
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOooTjx5_xTje-7uD9wA5J6-GMyF5_0Gox4kyAq7ccsnL9Z9zdQye
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [www.traveloka.com]
 match = -96.0%%
