--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-05 12:15:48
+lastsearch = 2024-08-05 14:03:09
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -17,14 +17,14 @@ title = Chiếu Trúc Tre Việt Nam | Hanoi
 url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [demxanh.com]
-match = -20.0%%
-title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html
+match = 16.0%%
+title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
 
 [chieucoi.com.vn]
-match = -68.0%%
-title = Chiếu cói - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
-url = https://chieucoi.com.vn/
+match = -60.0%%
+title = Chiếu nhựa - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
+url = https://chieucoi.com.vn/danh-muc/chieu-nhua/
 
 [tchome.vn]
 match = 36.0%%
