--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-05 12:33:55
+lastsearch = 2024-08-05 13:46:54
 
 [shopee.vn]
-match = 29.0%%
-title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
-url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
+match = 19.4%%
+title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
+url = https://shopee.vn/phuong97tb
 
 [tiki.vn]
 match = 48.4%%
 title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
+url = https://tiki.vn/chieu-nhua-thai-binh-ben-dep-du-co-1m6-x-2ml-p182155456.html?spid=182155476
 
 [www.diepxuan.com]
 match = 58.1%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [m.facebook.com]
-match = -6.5%%
-title = SANG NHƯỢNG + MUA BÁN TIỆM QUÁN Ở CHLB ĐỨC
-url = https://m.facebook.com/groups/1110093975748337/posts/7873087172782283/
+match = 9.7%%
+title = Hội Sales Quảng Bình 73 | Chào cả nhà
+url = https://m.facebook.com/groups/251202215303340/posts/858519194571636/
 
 [trangvangvietnam.com]
 match = 20.0%%
