--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-05 11:31:43
+lastsearch = 2024-08-05 14:00:20
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 20 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.20.MIZCLBSI
+match = -100.0%%
+title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -17,9 +17,9 @@ title = Thufingte 1-31 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -58.8%%
-title = Matthew 20:22-23 King James Version
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=KJV
+match = -100.0%%
+title = Matthew 20:22 New American Standard Bible
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NASB
 
 [mungchup.com]
 match = -100.0%%
@@ -52,9 +52,9 @@ title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -94.1%%
-title = San Holo - bb u ok? (Official Visualiser)
-url = https://www.youtube.com/watch?v=vPAhSrVTtgk
+match = -111.8%%
+title = KHAWNBAWL FAPA HUAISEN LEH HMEITHAI FANU ...
+url = https://www.youtube.com/watch?v=7GusulFHxY4
 
 [www.biblestudytools.com]
 match = -129.4%%
