--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-05 10:41:42
+lastsearch = 2024-08-05 14:01:43
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOopWRJcMD2GGw6qHd8fXjxEItuDQauVYPX60D_KeHh5ID_M3ZAC3
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -59,7 +59,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [abes.com.vn]
 match = -110.0%%
 title = Bàn giao 15 Giường thẩm mỹ 3 khúc cao cấp Hi-MEC và ...
-url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t?srsltid=AfmBOopv-1Mc6ei80MUOfJaJsl7cTxaw6hGUNbmjVoFBIyoWul8i23xW
+url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t
 
 [giuongngugiare.vn]
 match = -80.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOorz9JKmjYlqkqlJKfZS7WbPe2kMijs9z3eUluArdEnh4bEsbKSz
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
