--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-05 12:20:17
+lastsearch = 2024-08-05 13:57:14
 
 [bilystore.vn]
 match = -95.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -114.3%%
-title = Thảm lông cừu trải giường, thảm nỉ nhung trải giường kích ...
-url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-kích-thước-1m2x1m9-hàng-loại-1-i.267488477.19054543830
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-hoạt-tiết-Chất-Liệu-Bông-Trắng-BẢO-HÀNH-1-NĂM-i.464791988.12332594857
 
 [tiki.vn]
 match = -38.1%%
