--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 13:47:56
+lastsearch = 2024-08-05 14:20:08
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -89.5%%
+title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
+url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
 
 [trangtrisanvuon.vn]
 match = -147.4%%
