--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-05 10:48:39
+lastsearch = 2024-08-05 14:23:16
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -20.0%%
-title = KÊNH VTC14
-url = https://www.youtube.com/channel/UCinkijG72G87sn-mtaFJTbA
+match = -156.2%%
+title = CAICEDO KIẾN TẠO THIÊN TÀI CHO HAALAND HỦY DIỆT ...
+url = https://www.youtube.com/watch?v=mgxh5wFWkQ8
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -212.5%%
+title = Tại sao V.League không chơi như Thai League, cho phép các ...
+url = https://www.facebook.com/100037593873375/videos/1232801161088673/?__so__=permalink
 
 [baocaobang.vn]
 match = -218.8%%
