--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-05 13:49:29
+lastsearch = 2024-08-05 14:28:19
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -107,9 +107,9 @@ title = Bảng thủy triều 05/07/2024 - dinhvuport.com.vn
 url = https://dinhvuport.com.vn/vn/tidetable.html
 
 [m.facebook.com]
-match = 35.0%%
-title = Chiếu tre chiếu trúc
-url = https://m.facebook.com/p/Chiếu-tre-chiếu-trúc-100085919899944/
+match = 8.3%%
+title = HR - TUYỂN DỤNG | Công ty Logistic
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8418762821481024/
 
 [ketoananpha.vn]
 match = -95.8%%
@@ -127,9 +127,9 @@ title = Mạnh tay xử lý kinh doanh đa cấp biến tướng, lừa đảo
 url = https://baochinhphu.vn/manh-tay-xu-ly-kinh-doanh-da-cap-bien-tuong-lua-dao-102240227130942022.htm
 
 [xaydungchinhsach.chinhphu.vn]
-match = 0.0%%
-title = Cơ cấu tổ chức mới của Bộ Tài chính
-url = https://xaydungchinhsach.chinhphu.vn/co-cau-to-chuc-moi-cua-bo-tai-chinh-119230420153834928.htm
+match = -87.5%%
+title = Tách Trung tâm điều độ hệ thống điện Quốc gia từ EVN và ...
+url = https://xaydungchinhsach.chinhphu.vn/tach-trung-tam-dieu-do-he-thong-dien-quoc-gia-tu-evn-va-chu-truong-thanh-lap-cong-ty-moi-119240804171223846.htm
 
 [www.customs.gov.vn]
 match = -11.8%%
@@ -330,4 +330,9 @@ url = https://dongxoai.gov.vn/
 match = -46.2%%
 title = An ninh ti vi
 url = https://antv.gov.vn/truyen-hinh-truc-tuyen.html
+
+[taisancong.vn]
+match = -58.3%%
+title = Đấu giá xe ô tô con Ford Lazer, biển số 64A-0574
+url = https://taisancong.vn/cong-ty-dau-gia-hop-danh-kien-giang-dau-gia-xe-o-to-con-ford-lazer-bien-so-64a-0574-34299.html
 
