--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-05 12:33:13
+lastsearch = 2024-08-05 14:20:32
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx0A81CX&sig=ACfU3U1ywdyLVrkqbYeGJ3x7zK2xKkQKmw&hl=en&sa=X&ved=2ahUKEwiW9Z6Ujt2HAxVdMVkFHTggNYUQ6AF6BAgaEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx0B51BX&sig=ACfU3U05j05bxSyxMP_A0wsg-J6aeKns1g&hl=en&sa=X&ved=2ahUKEwiMkLeZqN2HAxUYrokEHS6MI2cQ6AF6BAgYEAM
 
 [ottawabraves.com]
 match = -292.3%%
