--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-05 11:27:15
+lastsearch = 2024-08-05 14:18:09
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -42.9%%
+title = Gallium
+url = https://en.wikipedia.org/wiki/Gallium
 
 [www.facebook.com]
 match = -84.6%%
@@ -700,4 +700,9 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/ga-ni-long/
+
+[www.historycolorado.org]
+match = -115.4%%
+title = Habari Gani? (Or, What's the News?)
+url = http://www.historycolorado.org/story/seasonal/2022/12/16/habari-gani-or-whats-news
 
