--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-05 11:26:56
+lastsearch = 2024-08-05 14:23:58
 
 [www.gov.uk]
 match = 0.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -253.3%%
-title = Vocabolario universale della lingua italiana: già edito dal ...
-url = https://books.google.com/books?id=kjlCAQAAMAAJ&pg=PA211&lpg=PA211&dq=man+re+trang+16&source=bl&ots=mPT9KzWsJz&sig=ACfU3U16gzrQxuqtSepR2VTQzBkpM9KQmQ&hl=en&sa=X&ved=2ahUKEwiq_oHy9tiHAxXFK0QIHRSZCWcQ6AF6BAgrEAM
+match = -260.0%%
+title = Department of the Army Pamphlet - Page 153 - Google Books Result
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPnzOyVMm&sig=ACfU3U08sa4NHhSXMT3iU55b9LoaNkMbFA&hl=en&sa=X&ved=2ahUKEwj-wu_7qN2HAxUlCnkGHS1WBh8Q6AF6BAggEAM
 
 [www.nolo.com]
 match = 0.0%%
