--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-05 13:46:28
+lastsearch = 2024-08-05 14:14:25
 
 [shopee.vn]
 match = -214.3%%
@@ -27,9 +27,9 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -150.0%%
-title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung.html
+match = -228.6%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [www.lazada.vn]
 match = -164.3%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+match = -128.6%%
+title = LUKA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
@@ -107,9 +107,9 @@ title = Holy Bible (Mizo) | Johana 3:15-18
 url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
 
 [www.churchofjesuschrist.org]
-match = -28.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -35.7%%
+title = Doktrin na ol Kavanen 89
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -145,4 +145,9 @@ url = https://en.wikipedia.org/wiki/SCP_Foundation
 match = -50.0%%
 title = Bandcamp
 url = https://bandcamp.com/
+
+[mizobibleblog.wordpress.com]
+match = -171.4%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
