--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-05 11:48:25
+lastsearch = 2024-08-05 14:17:08
 
 [www.everonvn.vn]
 match = 34.5%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOopArd2JNROnsA-AuWeLq5Vp9rnUErT7Bn1c09iXAU66xJWHdhVU
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [everonvn.com.vn]
 match = -20.7%%
