CI images update

--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-05 13:33:51
+lastsearch = 2024-08-05 14:27:18
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -155,4 +155,9 @@ url = https://baodaknong.vn/gio-to-hung-vuong-18-4-10-3-am-lich-top-4-chom-sao-s
 match = -25.0%%
 title = Nam Định tậu ngoại binh đa năng nhất V.League
 url = https://bongdaplus.vn/v-league/nam-dinh-tau-ngoai-binh-da-nang-nhat-v-league-4393632407.html
+
+[vff.org.vn]
+match = -41.7%%
+title = Vòng loại giải bóng đá Vô địch U15 Quốc gia 2024
+url = https://vff.org.vn/vong-loai-giai-bong-da-vo-dich-u15-quoc-gia-2024-ket-qua-luot-2/
 
