--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-05 12:25:24
+lastsearch = 2024-08-05 14:30:02
 
 [www.diepxuan.com]
 match = 38.7%%
@@ -72,9 +72,9 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [shopadf.com]
-match = -51.6%%
-title = Những mẫu máy chiếu dưới 10 triệu đồng đáng mua mùa bóng ...
-url = http://shopadf.com/nhung-mau-may-chieu-duoi-10-trieu-dong-dang-mua-mua-bong-world-cup-133706.html
+match = -54.8%%
+title = Bên trong nơi diễn ra sự kiện ra mắt iPhone 8 - Xu Vàng 777
+url = http://shopadf.com/ben-trong-noi-dien-ra-su-kien-ra-mat-iphone-8-67152.html
 
 [www.tles.tyc.edu.tw]
 match = -22.7%%
