--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-05 14:00:20
+lastsearch = 2024-08-05 14:43:02
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -17,9 +17,9 @@ title = Thufingte 1-31 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -100.0%%
-title = Matthew 20:22 New American Standard Bible
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NASB
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,14 +47,14 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -111.8%%
-title = KHAWNBAWL FAPA HUAISEN LEH HMEITHAI FANU ...
-url = https://www.youtube.com/watch?v=7GusulFHxY4
+match = -94.1%%
+title = San Holo - bb u ok? (Official Visualiser)
+url = https://www.youtube.com/watch?v=vPAhSrVTtgk
 
 [www.biblestudytools.com]
 match = -129.4%%
@@ -204,7 +204,7 @@ url = https://ulele.com/
 [www.nothingbundtcakes.com]
 match = -94.1%%
 title = Nothing Bundt Cakes: Delicious Bundt Cakes
-url = https://www.nothingbundtcakes.com/?srsltid=AfmBOoq0FY3i6BzizCaoLCYdbOLgzxddLKzYZM0ubAbDpYSjopr4Yfb1
+url = https://www.nothingbundtcakes.com/
 
 [events.stanford.edu]
 match = -82.4%%
