--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-05 13:40:58
+lastsearch = 2024-08-05 14:34:13
 
 [erado.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
-match = -125.0%%
-title = Bộ phụ kiện giường gấp thông minh 18 lò xo [ bảo hành 5 ...
-url = https://www.lazada.vn/products/bo-phu-kien-giuong-gap-thong-minh-18-lo-xo-bao-hanh-5-nam-dung-cho-giuong-1m8-tro-len-i311139000.html
+match = -5.0%%
+title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
 
 [fhomehatinh.com]
 match = -140.0%%
