CI images update

--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-05 12:45:03
+lastsearch = 2024-08-05 15:18:17
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -400,4 +400,9 @@ url = https://ipsworks.org/index.php/evidence-for-ips/
 match = -152.6%%
 title = Registrants | Cyber-Physical Systems Virtual Organization
 url = https://cps-vo.org/group/satc-pimtg22/registrants
+
+[www.prnewswire.com]
+match = 0.0%%
+title = 
+url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidential-scholars-in-the-arts-302141477.html
 
