--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-05 14:14:25
+lastsearch = 2024-08-05 15:28:54
 
 [shopee.vn]
 match = -214.3%%
@@ -27,14 +27,14 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -228.6%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -150.0%%
+title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
 match = -164.3%%
 title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOooY7eG4Rp-lO2Yw9rZMcB8iqIp4sblKzb4TI_r7QFaUDKifM5-D
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
 
 [www.mungbaobao.com]
 match = -214.3%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -128.6%%
-title = LUKA 18 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
+match = -142.9%%
+title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
+url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
 
 [mungchup.com]
 match = -164.3%%
