--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-05 14:30:44
+lastsearch = 2024-08-05 15:21:21
 
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOorUealsP63eJiM3LwQ_AdS_j069q8ndchnrByK4vE1RJdsESFXd
 
 [demxanh.com]
 match = -4.5%%
 title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html?srsltid=AfmBOor6Up3k7ypoR_-0gz-jTYzuFVDU4RCwLMjYT6oeoFfuPDPUOc2p
 
 [www.lazada.vn]
-match = -68.2%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -113.6%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOoqpW9CJlUz-pMz-vSAvb1e_7SEY77XSWNy87doDSNZIqjC5TtJd
 
 [noithatlongthai.com]
 match = -13.6%%
