--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-05 14:52:18
+lastsearch = 2024-08-05 15:24:49
 
 [www.everonqb.com]
 match = -39.1%%
@@ -22,8 +22,8 @@ title = Bộ chăn ga gối Everon ES1804
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 
 [www.diepxuan.com]
-match = 34.8%%
-title = Vỏ gối ôm ES1715 80x100 - Điệp Xuân
+match = 43.5%%
+title = Điệp Xuân Vỏ gối ôm ES1715 80x100
 url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
 
 [forum.cartridgecollectors.org]
