--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-05 12:40:55
+lastsearch = 2024-08-05 15:20:21
 
 [www.lazada.vn]
 match = -46.7%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooJthl5tBgy9TWfdQhPLA2ZAEXQI1agxrXVhADbTjqE8JbW_3u0
+url = https://jysk.vn/vo-goi-trang-tri
 
 [chus.vn]
 match = -173.3%%
@@ -32,9 +32,9 @@ title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
 url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
-match = -173.3%%
-title = Vỏ gối vuông sofa họa tiết hình học 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-hoa-tiet-bac-au-45x45-cm
+match = -140.0%%
+title = Vỏ gối vuông sofa nhung gân sọc 45x45 cm - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-sofa-nhung-gan-soc-45x45-cm
 
 [flexhouse.vn]
 match = -160.0%%
