--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-05 11:46:19
+lastsearch = 2024-08-05 15:48:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -242,9 +242,9 @@ title = Phong trào thể dục thể thao ở Sốp Cộp
 url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJK3mlSg.html
 
 [books.google.com]
-match = -268.8%%
-title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HxxkT34U&sig=ACfU3U0hikPHY_rubefcEU26yNdn4Mqi0w&hl=en&sa=X&ved=2ahUKEwjezfW859qHAxVhpIkEHS9tAecQ6AF6BAgfEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=havaAAAAMAAJ&pg=PA67&lpg=PA67&dq=chieu+lac+soc+08&source=bl&ots=JZwFLWD_DT&sig=ACfU3U2z6HF4dYlj6_39NcwhvS0_3EKXoA&hl=en&sa=X&ved=2ahUKEwj8oMLsu92HAxVzF1kFHQ5WB4wQ6AF6BAgaEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -175.0%%
-title = Tuần 05-09/08/2024: 10 cổ phiếu nóng dưới góc nhìn ...
-url = https://vietstock.vn/2024/08/tuan-05-09082024-10-co-phieu-nong-duoi-goc-nhin-ptkt-cua-vietstock-585-1216298.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 05/08: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0508-tam-ly-than-trong-bao-trum-thi-truong-585-1216444.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -862,7 +862,7 @@ title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
 url = http://www.hawacom.vn/
 
 [thoibaotaichinhvietnam.vn]
-match = -187.5%%
-title = Giá vàng hôm nay (5/8): Nhiều dự báo giá sẽ không còn ...
-url = https://thoibaotaichinhvietnam.vn/gia-vang-hom-nay-58-nhieu-du-bao-gia-se-khong-con-lac-quan-trong-tuan-moi-156422.html
+match = -206.2%%
+title = Cảnh báo chiêu trò lừa đảo bán thuốc đặc trị trên mạng xã ...
+url = https://thoibaotaichinhvietnam.vn/canh-bao-chieu-tro-lua-dao-ban-thuoc-dac-tri-tren-mang-xa-hoi-156442.html
 
