--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-05 14:28:38
+lastsearch = 2024-08-05 15:49:08
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường màu xám tại Kasson, ...
+url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -175,4 +175,9 @@ url = https://www.tripadvisor.com/Hotel_Review-g15017900-d13814019-Reviews-Thai_
 match = -263.6%%
 title = Giường sắt 1m x 2m - Giường ngủ giá rẻ dưới 1 triệu
 url = https://cofa.vn/giuong-sat-1m-x-2m/
+
+[www.ghostbed.com]
+match = -309.1%%
+title = Shop GhostBed: Luxury Cooling Mattresses & Bedding ...
+url = https://www.ghostbed.com/
 
