--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-05 14:13:40
+lastsearch = 2024-08-05 15:48:03
 
 [shopee.vn]
 match = -28.0%%
@@ -59,7 +59,7 @@ url = https://cellphones.com.vn/sforum/phim-dai-loan
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
 
 [www.traveloka.com]
 match = -76.0%%
@@ -92,9 +92,9 @@ title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đà
 url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
 
 [www.youtube.com]
-match = -108.0%%
-title = 20240415 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=S1nS1M-7VOc
+match = -52.0%%
+title = Phim Lần Thứ Hai Mình Yêu Nhau tập 15 phim Đài Loan
+url = https://www.youtube.com/watch?v=-nn3leYhWVI
 
 [www.qdnd.vn]
 match = -72.0%%
@@ -188,8 +188,8 @@ url = https://www.instagram.com/toiodailoan/p/C7Dmp74AkwU/
 
 [www.skyscanner.com.vn]
 match = -48.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
-url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
+title = Vé máy bay giá rẻ từ Đài Bắc đến Đức - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/de/đai-bac-to-đuc.html
 
 [tamloppoly.vn]
 match = -20.0%%
@@ -257,8 +257,8 @@ title = Vé máy bay Đài Đông Đài Bắc giá rẻ
 url = https://vn.trip.com/flights/taitung-to-taipei/airfares-ttt-tpe/
 
 [www.china-airlines.com]
-match = -12.0%%
-title = Tìm kiếm chuyến bay | China Airlines
+match = 0.0%%
+title = Đặt vé cho chuyến bay
 url = https://www.china-airlines.com/sea/vi/booking/book-flights/flight-search?lang=vi-VN&deptstn=HAN&arrstn=TPE
 
 [www.levanduyet.net]
@@ -320,4 +320,9 @@ url = https://www.lazada.vn/products/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-
 match = -76.0%%
 title = Đài Loan là động lực cho cuộc thanh trừng quân sự của ...
 url = https://nghiencuuquocte.org/2024/01/15/dai-loan-la-dong-luc-cho-cuoc-thanh-trung-quan-su-cua-tap/
+
+[www.vn.kayak.com]
+match = -52.0%%
+title = Chuyến bay giá rẻ 2.344.341 ₫ đi từ Đài Loan đến Đà Nẵng
+url = https://www.vn.kayak.com/flight-routes/ai-Loan-TW0/Da-Nang-DAD
 
