--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-05 12:34:59
+lastsearch = 2024-08-05 15:48:49
 
 [vinatools.com]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -186.7%%
-title = Bán lô (7x20m) đường D2 (16m) KDC Nam Long, P. ...
-url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-do-xuan-hop-phuong-phuoc-long-b-prj-khu-dan-cu-nam-long/an-lo-7x20m-d2-16m-kdc-p-tp-thu-duc-pr36221549
+match = -213.3%%
+title = Cho thuê nhà đất tại đường Lý Chiêu Hoàng, Quận Bình Tân
+url = https://batdongsan.com.vn/nha-dat-cho-thue-duong-ly-chieu-hoang-phuong-an-lac-6
 
 [m.facebook.com]
 match = -213.3%%
@@ -187,9 +187,9 @@ title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,
 url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
 
 [www.ministop.vn]
-match = -26.7%%
-title = Danh sách tất cả cửa hàng
-url = https://www.ministop.vn/ms/all
+match = -93.3%%
+title = List of all shops | Shop Location
+url = https://www.ministop.vn/en/ms/all
 
 [austronggroup.com.vn]
 match = -66.7%%
@@ -242,9 +242,9 @@ title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
-match = -220.0%%
-title = Đại hội đại biểu câu lạc bộ Trái tim đỏ nhiệm kỳ 2022 - 2023
-url = https://hcmyu.hpu2.edu.vn/dai-hoi-dai-bieu-cau-lac-bo-trai-tim-do-nhiem-ky-2022---2023.html
+match = -253.3%%
+title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
+url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
 
 [sxd.dongnai.gov.vn]
 match = -160.0%%
@@ -292,9 +292,9 @@ title = Mông địa Thiên To
 url = https://sienergie.fr/4291517-mông-to-địa-thiên.html
 
 [apps.dtic.mil]
-match = -253.3%%
-title = Lessons Learned, Headquarters, II Field Force Vietnam - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/AD0511158.pdf
+match = -120.0%%
+title = Senior Officer Debriefing Report - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/AD0517426.pdf
 
 [www.psywarrior.com]
 match = -80.0%%
@@ -320,4 +320,19 @@ url = https://luatvietnam.vn/thong-tin/cong-van-978-cv-du-cua-dang-uy-so-giao-du
 match = -240.0%%
 title = Tra cứu thời khóa biểu - Thông báo chung - Học viện ngân hàng
 url = https://online.hvnh.edu.vn/public/tracuuthoikhoabieu
+
+[olm.vn]
+match = -233.3%%
+title = Cho △ABC lấy d1 và d2 là đường phân giác ngoài tại đỉnh ...
+url = https://olm.vn/cau-hoi/cho-abc-lay-d1-va-d2-la-duong-phan-giac-ngoai-tai-dinh-b-va-c-lay-m-q-lan-luot-la-hinh-chieu-cua-a-c-tren-d1-lay-n-p-lan-luot-la-hinh-chieu-cua.4477586981820
+
+[mss.anthem.com]
+match = -40.0%%
+title = Santa Clara County, CA 2022
+url = https://mss.anthem.com/california-mmp/caca_mmp_providerdirectory2022_eng.pdf
+
+[hcmc.vietnam.embassy.gov.au]
+match = -200.0%%
+title = Contact List - Hospitals - Ho Chi Minh City, Vietnam
+url = https://hcmc.vietnam.embassy.gov.au/files/hchi/list-of-hospitals-feb-2024.pdf
 
