--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-05 13:38:56
+lastsearch = 2024-08-05 15:36:57
 
 [scholar.google.com]
 match = -43.8%%
@@ -87,9 +87,9 @@ title = Phim chưa chiếu đã gây sốc vì cảnh nóng của học sinh ...
 url = https://gamek.vn/phim-chua-chieu-da-gay-soc-vi-canh-nong-cua-hoc-sinh-netizen-nem-da-gay-gat-phan-cam-qua-roi-day-178240604102939863.chn
 
 [www.google.com]
-match = -200.0%%
-title = https://www.google.com/maps/@21.0506866,105.804746...
-url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
+match = -112.5%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
 match = 6.2%%
@@ -267,9 +267,9 @@ title = DCINE Bến Thành
 url = https://www.dcine.vn/rap/dcine-ben-thanh-2.html
 
 [kenh14.vn]
-match = -193.8%%
-title = Vụ phân xác cô gái vào chiều 29 Tết: Tử hình Nguyễn ...
-url = https://kenh14.vn/vu-phan-xac-co-gai-vao-chieu-29-tet-tu-hinh-nguyen-dang-khoa-20240709123717047.chn
+match = -156.2%%
+title = Dàn diễn viên phim Hoa ngữ 18+ Sắc, Giới sau 17 năm
+url = https://kenh14.vn/dan-dien-vien-phim-hoa-ngu-18-sac-gioi-sau-17-nam-bay-gio-ra-sao-215240805003825744.chn
 
 [tankieu.vn]
 match = -131.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -193.8%%
-title = Thăng hạng vóc dáng, đón tháng 8 cực "SLAY" ✨ Sale lớn ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8419674021389904/
+match = -112.5%%
+title = SG29 STORE_________ 𝐖𝐞 𝐀𝐫𝐞 𝐇𝐢𝐫𝐢𝐧𝐠 - ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8419932138030759/
 
 [shopee.vn]
 match = -75.0%%
