--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-05 11:44:01
+lastsearch = 2024-08-05 15:41:46
 
 [shopee.vn]
-match = -8.0%%
-title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
-url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
+match = 48.0%%
+title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
+url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
 
 [munghoangphat.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Chụp Tự Bung Cao Cấp Giá Tốt, Xu Hướng Mới ...
-url = https://www.mungbaobao.com/mung-chup-tu-bung-cao-cap.html
+match = -28.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [tiki.vn]
 match = -8.0%%
