--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-05 12:52:29
+lastsearch = 2024-08-05 16:19:07
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [www.youtube.com]
 match = 47.6%%
@@ -675,4 +675,24 @@ url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 match = -76.2%%
 title = Chiếu Chiếu Trúc Gỗ Xịn Thái Lan 1,8mx2m Loại 1 - GOODL
 url = https://www.sendo.vn/chieu-chieu-truc-go-xin-thai-lan-1-8mx2m-loai-1-29295438.html
+
+[www.yenbai.gov.vn]
+match = -100.0%%
+title = Yên Bái: Mưa lớn gây thiệt hại khoảng 600 triệu đồng
+url = https://www.yenbai.gov.vn/noidung/tintuc/Pages/chi-tiet-tin-tuc.aspx?ItemID=34805&l=Tintrongtinh
+
+[www.xanhsm.com]
+match = 16.7%%
+title = Câu hỏi thường gặp
+url = https://www.xanhsm.com/cau-hoi-thuong-gap/
+
+[vietstock.vn]
+match = -114.3%%
+title = [Longform] TPBank - Từ lá cờ đầu về ngân hàng số đến ...
+url = https://vietstock.vn/2024/08/tpbank-tu-la-co-dau-ve-ngan-hang-so-den-cong-cuoc-chuyen-doi-xanh-757-1212709.htm
+
+[issmitliebe.de]
+match = -28.6%%
+title = 2024 Vật Dương Cứng Khio Cương Nào
+url = https://issmitliebe.de/4086954-dương-vật-cương-cứng-khio-nào.html
 
