--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-05 05:19:35
+lastsearch = 2024-08-05 16:17:05
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [demxanh.com]
 match = 29.8%%
@@ -17,9 +17,9 @@ title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
 url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOopst-C9JnLQXoXPNh3QQoWCi2Mjo6J_Ph7n9ha_BEURKUqdztKW
 
 [nemragoi.com]
-match = 37.9%%
-title = Nệm lò xo Kingkoil Cloud Firm
-url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
+match = 24.2%%
+title = Nệm lò xo Kingkoil Cloud Euro Top
+url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-euro-top.html
 
 [everonkorea.com]
 match = 31.8%%
@@ -49,12 +49,12 @@ url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.h
 [www.diepxuan.com]
 match = 53.2%%
 title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html?srsltid=AfmBOoq3RMpMemK7qi6dOlfElynaBgSHe_Ic1nLlPrtam_fT7dW34rI-
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
-match = 31.9%%
-title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
-url = https://everon.online/collections/dem-lo-xo-king-koil
+match = 25.5%%
+title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
+url = https://everon.online/collections/dem-lo-xo-everon
 
 [everonvn.com.vn]
 match = 19.1%%
@@ -75,4 +75,9 @@ url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
 match = 19.1%%
 title = Đệm Lò Xo Kingkoil Cloud Pillow Top - Sự Nâng Đỡ Tối Đa
 url = https://everonhanquoc.vn/everon/12714/dem-lo-xo-everon-kingkoil-cloud-pillow-top
+
+[everonchinhhang.vn]
+match = 26.3%%
+title = Đệm lò xo Kingkoil Cloud Firm - Everon
+url = https://everonchinhhang.vn/products/dem-lo-xo-kingkoil-cloud-firm
 
