--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-05 15:22:45
+lastsearch = 2024-08-05 16:16:43
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOorcfb_FKemPvkvJRj3QG1M20hR92MmHBv_6_8uLawmNjDdTKpTy
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [www.lazada.vn]
 match = -81.8%%
 title = Thảm Trải Giường 1m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-1m/?srsltid=AfmBOoodHBrWKbfg75lvjeDyO-hB98w6nqQ1XV05wO2zeOYcgRZMqLC0
+url = https://www.lazada.vn/tag/tham-trai-giuong-1m/
 
 [flexhouse.vn]
 match = -104.5%%
