--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-05 14:32:28
+lastsearch = 2024-08-05 16:18:46
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
+match = -52.4%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [cafeland.vn]
 match = -100.0%%
@@ -97,9 +97,9 @@ title = Thảm trải giường Fila - Đà Nẵng
 url = https://suongtuyet.com/tham-trai-giuong-fila
 
 [noithatcaco.vn]
-match = -123.8%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -95.2%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [unmei.com.vn]
 match = -100.0%%
@@ -195,4 +195,9 @@ url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 match = -9.5%%
 title = Giường sắt 2 tầng màu ghi - GT 12
 url = https://noithatduongdong.com/giuong-sat-2-tang-mau-ghi-gt-12
+
+[muanhanhvatlieuxaydung.ritavo.com]
+match = 17.6%%
+title = giường twils sail
+url = https://muanhanhvatlieuxaydung.ritavo.com/products/giuong-twils-sail-2
 
