CI images update

--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-05 15:26:52
+lastsearch = 2024-08-05 16:32:15
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,13 +27,13 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -118.2%%
-title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, chăn 4kg cực ...
+match = -59.1%%
+title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, ...
 url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
 
 [www.instagram.com]
-match = -100.0%%
-title = 𝗖𝗛𝗔𝗥𝗟𝗢𝗡𝗘 𝗔𝗡𝗗 𝗖𝗢𝗖𝗢 𝗙𝗨𝗧𝗨𝗥𝗘. HM01. 💚 Mã Phi lụa 1 màu ...
+match = -77.3%%
+title = 𝗖𝗛𝗔𝗥𝗟𝗢𝗡𝗘 𝗔𝗡𝗗 𝗖𝗢𝗖𝗢 𝗙𝗨𝗧𝗨𝗥𝗘. HM01. 💚 Mã Phi lụa ...
 url = https://www.instagram.com/p/C7hH3TevMho/
 
 [h5.lazada.vn]
@@ -52,8 +52,8 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [www.tiktok.com]
-match = -109.1%%
-title = Sét ga gối nỉ nhung Coco 3 món gồm 1 ga chun và 2 vỏ gối nằm ...
+match = -72.7%%
+title = Sét ga gối nỉ nhung Coco 3 món gồm 1 ga chun và 2 vỏ ...
 url = https://www.tiktok.com/@me.mai.trang/video/7311530198921465089
 
 [thegioidemviet.vn]
