CI images update

--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-05 11:24:34
+lastsearch = 2024-08-05 16:44:28
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -40.7%%
+title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
 
 [foreverbedding.net]
 match = -59.3%%
