--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-05 11:47:48
+lastsearch = 2024-08-05 16:58:57
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOorM9snVPnxYxLmL6eYw50MGNuQErLsYM09pIaOaDTJttvByUojP
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
 match = -57.1%%
 title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16?srsltid=AfmBOoo8I0MbfLxx7lXXIg2XmzFFVc5dUwSlZ7VDrP2Ncc-4EP_cJrko
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -104.8%%
@@ -44,7 +44,7 @@ url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-160x200.html?srsltid=AfmBOopdWtN0OJLDeK2VtrrslrvkYYbEZMJsqNHpIA1FGhgnhLQ_BX2Y
+url = https://www.diepxuan.com/bo-chun-xoa-160x200.html
 
 [everon365.vn]
 match = 33.3%%
