--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-05 13:43:23
+lastsearch = 2024-08-05 16:59:20
 
 [shopee.vn]
 match = -36.8%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -121.1%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -100.0%%
+title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelinhchi.com]
 match = -89.5%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Chiều nay em đi câu cá, con cua, nhạc thiếu nhi vui nhộn, quả ...
-url = https://www.youtube.com/watch?v=6ZKWF1hxUeE
+match = -147.4%%
+title = Ò Ó O o Dậy Đi Thôi Mau Dậy Bạn Ơi - Bài Hát Bé Nghe Mỗi ...
+url = https://www.youtube.com/watch?v=_bALkbOOQfY
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -136.8%%
-title = Cây Xương Rồng Nhảy Múa, Loại 120 Bài Hát Vui Nhộn, ...
-url = https://tiki.vn/cay-xuong-rong-nhay-mua-loai-120-bai-hat-vui-nhon-do-choi-tre-em-ht-sys-p275290022.html?spid=275290023
+match = -110.5%%
+title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=chiếu tre
 
 [khodem.vn]
 match = -31.6%%
@@ -112,9 +112,9 @@ title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương mại .
 url = https://huongtruc.com/chi-tiet/chieu-ht
 
 [chieutruc.info]
-match = -136.8%%
-title = Chiếu cây chất liệu tre trúc tự nhiên, mẫu mã phong phú, giá ...
-url = https://chieutruc.info/chieu-cay/
+match = -68.4%%
+title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
+url = https://chieutruc.info/chieu-tam-ht/
 
 [shoptretho.com.vn]
 match = -126.3%%
