--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-05 12:26:25
+lastsearch = 2024-08-05 16:52:20
 
 [demxanh.com]
 match = 40.7%%
@@ -97,8 +97,8 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [fptshop.com.vn]
-match = -29.6%%
-title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
+match = 0.0%%
+title = 
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [www.youtube.com]
