--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-05 13:26:49
+lastsearch = 2024-08-05 16:53:42
 
 [screenrant.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html
+url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOooyP3-0tzjou97mAA-91yW7l_0KmX_iJkPRiOjCsoqzJX6OKCyR
 
 [www.uscis.gov]
 match = -114.3%%
@@ -117,9 +117,9 @@ title =
 url = https://www.google.com/search?sca_esv=66046235350063f2&sca_upv=1&q=Who+wrote+the+Killing+of+Georgie+lyrics?&sa=X&ved=2ahUKEwi3kc6nucqGAxXykIkEHQ4QIj4QsZYEegQIMhAC
 
 [www.tiktok.com]
-match = 21.4%%
-title = chấp 10 man xanh
-url = https://www.tiktok.com/@lhn510/photo/7363834268344175873
+match = -164.3%%
+title = 10FT SHARK PULLS MAN 4 MILES AWAY FROM SHORE!
+url = https://www.tiktok.com/@zak_catchem/video/7320112463750499627?lang=en
 
 [www.ashrae.org]
 match = 0.0%%
