--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-05 15:41:46
+lastsearch = 2024-08-05 16:49:39
 
 [shopee.vn]
-match = 48.0%%
-title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
-url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
+match = 32.0%%
+title = Màn mùng chụp tự bung đỉnh vuông Mộc Chi
+url = https://shopee.vn/Màn-mùng-chụp-tự-bung-đỉnh-vuông-Mộc-Chi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.308360882.15394517998
 
 [munghoangphat.com]
 match = 12.0%%
@@ -27,9 +27,9 @@ title = Màn đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
-match = -12.0%%
-title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
+match = -52.0%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manthutrang.com]
 match = -40.0%%
