--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-05 12:41:59
+lastsearch = 2024-08-05 16:45:08
 
 [shopee.vn]
 match = -8.3%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -75.0%%
 title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn ...
-url = https://www.lazada.vn/products/tham-ni-lau-chan-hinh-chu-nhat-chui-chan-len-mem-min-day-dan-chong-tron-truot-hang-chat-luong-cao-i2478711937.html
+url = https://www.lazada.vn/products/tham-ni-lau-chan-hinh-chu-nhat-chui-chan-len-mem-min-day-dan-chong-tron-truot-hang-chat-luong-cao-i2478711937.html?srsltid=AfmBOopTHN78PIo36yGi2oxunyqtbSY_pg_62ol2PCde91jU1WUCZaAH
 
 [megahomevietnam.com]
 match = 20.0%%
