--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-08-05 14:34:53
+lastsearch = 2024-08-05 17:21:17
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -166.7%%
+title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
+url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -120.0%%
-title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
-url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
+match = -133.3%%
+title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
+url = https://ghedamienbac.com/ban-ghe-da/
 
 [bangheda.info]
 match = -140.0%%
@@ -97,12 +97,17 @@ title = GIÁ GHẾ ĐÁ | GIÁ XƯỞNG SẢN XUẤT [GIAO HÀNG TẬN NƠI]
 url = https://ghedasaigon.com/gia-bo-ban-ghe-da/
 
 [ghedagiaxuong.vn]
-match = 40.0%%
-title = Bàn ghế đá một màu
+match = -6.7%%
+title = Bàn ghế đá tròn màu trắng
 url = https://ghedagiaxuong.vn/ban-ghe-da-mot-mau-trang
 
 [www.bulaz.com]
 match = -80.0%%
 title = Bàn ghế đá tự nhiên (mẫu bàn dài 2,1m)
 url = https://www.bulaz.com/vn/ban-ghe-da-tu-nhien-mau-ban-dai-21m-150.html
+
+[vseat.vn]
+match = -73.3%%
+title = Ghế da văn phòng GW-2103B - Vseat
+url = https://vseat.vn/san-pham/ghe-da-van-phong-gw-2103b/
 
