--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-05 10:31:58
+lastsearch = 2024-08-05 17:19:55
 
 [everon.online]
 match = -7.4%%
@@ -14,7 +14,7 @@ url = https://everon.online/products/bo-everon-sr01
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOoqacEHaq4oZ0qf1U_PiRthI4QqDXIU1Ndr9u-NFlFXa5wNLWZIH
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOop2IXvvtV7ISnGPlnqFPrJWCB4ke2xd0lHMx4ew0fhZZotNoiZD
 
 [everonhanquoc.vn]
 match = 18.5%%
