--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-05 10:34:05
+lastsearch = 2024-08-05 17:13:03
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,9 +17,9 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -66.7%%
+title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
 
 [changagoidemsonghong.com]
 match = -14.3%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = 9.5%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = -28.6%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [www.diepxuan.com]
 match = -9.5%%
