--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-05 16:13:14
+lastsearch = 2024-08-05 17:17:36
 
 [tiki.vn]
 match = -138.9%%
@@ -39,22 +39,22 @@ url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh
 [demxanh.com]
 match = -72.2%%
 title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html?srsltid=AfmBOopLNPn4zzlikpl7yR-XbYY5Mmv6FYRiuYuj1vwGqvnl3mnqO4iO
 
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOopaAVmf31-QKNeSAkjLudY686LviWZDwVqa_k4AHKGF3GlVIpPC
 
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
+url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam?srsltid=AfmBOopsp8i8rhEl8jiZgEpx5Yn9xCJaUIqSFabPUiM5PLOiPBZtuqZj
 
 [everonvn.com.vn]
 match = -105.6%%
 title = Bộ Everon Esm-20011 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011?srsltid=AfmBOoplYNJqG9LvROBTCWEPjY9PRFT4jA1E1F7XkEzI5qnZF6l7XDmm
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = 27.8%%
 title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html?srsltid=AfmBOor9aAJSXEVEWMscA53ScdXrOK8dRF1xlvfo_zQV34IChDt-ELK8
 
 [dovihome.vn]
 match = 0.0%%
