--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-05 15:37:18
+lastsearch = 2024-08-05 17:22:19
 
 [eva.vn]
-match = -126.3%%
-title = Trồng hoa nhài dùng 3 tuyệt chiêu, 1 cây nở 400 bông ...
-url = https://eva.vn/cay-canh-vuon/trong-hoa-nhai-dung-3-tuyet-chieu-1-cay-no-400-bong-huong-hoa-day-nha-cu-tan-lai-no-c283a564020.html
+match = -163.2%%
+title = 8 loại cây bóng mát vừa cho hoa đẹp vừa ít rụng lá, trồng ...
+url = https://eva.vn/cay-canh-vuon/8-loai-cay-bong-mat-vua-cho-hoa-dep-vua-it-rung-la-trong-truoc-nha-chang-khac-gi-co-than-giu-cua-c283a580819.html
 
 [phunutoday.vn]
 match = -152.6%%
@@ -172,9 +172,9 @@ title = Bản hòa ca Ánh Sáng và Bóng Tối: 7 thiết kế tường hoa gi
 url = https://kienviet.net/2024/6/26/ban-hoa-ca-anh-sang-va-bong-toi-7-thiet-ke-tuong-hoa-gio
 
 [m.facebook.com]
-match = -63.2%%
-title = Chào Yêu Bếp, hôm nay trời Hà Nội mát mẻ ...
-url = https://m.facebook.com/groups/groupyeubep/posts/2223256514725158/
+match = -147.4%%
+title = YÊU BẾP✅ (Esheep Kitchen family) | Chia sẻ với các bác 1 ...
+url = https://m.facebook.com/groups/groupyeubep/posts/2272700019780807/
 
 [www.phunuonline.com.vn]
 match = -94.7%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -57.9%%
-title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
+match = -147.4%%
+title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
@@ -360,4 +360,9 @@ url = https://www.qdnd.vn/quoc-phong-an-ninh/xay-dung-quan-doi/bong-hong-noi-tha
 match = -157.9%%
 title = Cây tùng bồng lai: Đặc điểm, ý nghĩa, công dụng và cách ...
 url = https://spacet.vn/blog/cham-soc-nha/cay-tung-bong-lai-dac-diem-y-nghia-cong-dung-va-cach-trong
+
+[bnews.vn]
+match = -105.3%%
+title = VN-Index lần thứ 10 mất mốc 1.200 điểm - Bnews.vn
+url = https://bnews.vn/vn-index-lan-thu-10-mat-moc-1-200-diem/342752.html
 
