--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-08-05 16:45:29
+lastsearch = 2024-08-05 17:25:06
 
 [demxanh.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel Ghi
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = 3.4%%
