--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-05 16:33:17
+lastsearch = 2024-08-05 17:28:18
 
 [demxanh.com]
 match = 27.6%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -27.6%%
-title = chiếu điều hòa mát lạnh chiếu cao su non 5d bọc nệm mền ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-boc-nem-men-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1918879701.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
