--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-05 09:54:08
+lastsearch = 2024-08-05 17:14:06
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -684,7 +684,7 @@ url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bie
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOorYo5kslXL95WNrCEQ_q2E3ux1baho_TuirKCd1J0MvzoJ5T1n4
 
 [www.tiktok.com]
 match = 27.3%%
