--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-05 14:16:26
+lastsearch = 2024-08-05 17:27:54
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -40.0%%
+title = 14dwy ren on Tumblr
+url = https://www.tumblr.com/tagged/14dwy ren
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -370.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
-url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
+match = -450.0%%
+title = Tallest Teenager - Guinness World Records Day | New record ...
+url = https://www.facebook.com/GuinnessWorldRecords/videos/tallest-teenager-guinness-world-records-day/657433078277882/
 
 [books.google.com]
 match = -460.0%%
@@ -330,4 +330,14 @@ url = https://sunny-speaks.tumblr.com/post/721943638643441664/hacker-ren-headcan
 match = -30.0%%
 title = Guy Reschenthaler
 url = https://reschenthaler.house.gov/
+
+[guinnessworldrecords.com]
+match = -440.0%%
+title = Chinese 14-year-old confirmed as tallest teenager in the ...
+url = https://guinnessworldrecords.com/news/2020/11/chinese-14-year-old-confirmed-as-tallest-teenager-in-the-world
+
+[www.morgan.edu]
+match = -390.0%%
+title = Morgan State University - Maryland's Preeminent Urban ...
+url = https://www.morgan.edu/
 
