--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-05 14:17:08
+lastsearch = 2024-08-05 17:15:50
 
 [www.everonvn.vn]
 match = 34.5%%
@@ -62,9 +62,9 @@ title = Ruột Gối Nằm Everon Thư Giãn Cổ Kích Thước 45x65 ...
 url = https://www.lazada.vn/products/ruot-goi-nam-everon-thu-gian-co-kich-thuoc-45x65-giam-moi-ho-tro-co-chinh-hang-by-icon-bedding-i2132799966.html?srsltid=AfmBOorMgzMlz-Ryl7kXzcoZbypJZV8su_IgsovH4xxOd-DjFFkRPEdl
 
 [shopee.vn]
-match = -20.7%%
-title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
-url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-16cm)-i.34660875.10533606712
+match = 44.8%%
+title = Ruột gối nằm Everon 45x65 poly ( gối thấp )
+url = https://shopee.vn/Ruột-gối-nằm-Everon-45x65-poly-(-gối-thấp-)-i.34660875.22967246551
 
 [www.everonqb.com]
 match = 72.4%%
