--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-05 14:47:53
+lastsearch = 2024-08-05 18:12:38
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -13,8 +13,8 @@ url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
 match = 0.0%%
-title = Jennifer Fung, PhD
-url = https://profiles.ucsf.edu/jennifer.fung
+title = Jeffrey Bluestone, PhD
+url = https://profiles.ucsf.edu/jeffrey.bluestone
 
 [cityofclovis.com]
 match = -65.0%%
@@ -445,4 +445,9 @@ url = https://www.wipp.energy.gov/library/cra/CRA-2014/References/Others/Butcher
 match = -30.0%%
 title = Pgou arrazua ubarrundia [EelTxK]
 url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://xn--98-6kc3bfr2e.xn--p1ai/86973245dedualorgsgv4fe36a
+
+[www.horrycountysc.gov]
+match = 5.6%%
+title = Flooding Areas for
+url = https://www.horrycountysc.gov/media/fwijikjp/caropines-deerfield-drainage-study-2000_part2.pdf
 
