--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-05 12:17:53
+lastsearch = 2024-08-05 18:23:31
 
 [everon.online]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = -17.6%%
-title = Bộ chăn ga chun, gối Everon SR-03 chất liệu 100%% cotton ...
-url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03
+match = -4.3%%
+title = Bộ chăn ga Everon SR-16
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
 match = 29.4%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -8.8%%
-title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
+match = -26.5%%
+title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Everon EPC 22047
 url = https://everon.com.vn/bo-chan-ga-everon-epc-22047/
 
 [tongdailyeveron.com.vn]
-match = -31.6%%
-title = Bộ Everon EPC 23044
-url = https://tongdailyeveron.com.vn/products/bo-everon-epc-23044
+match = 57.1%%
+title = Bộ ga chun chần hoa MDSM2202
+url = https://tongdailyeveron.com.vn/products/bo-ga-chun-chan-mdsm2202
 
 [chandrapsaigon.com]
 match = -8.8%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22031 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22031.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [demxanh.com]
 match = -2.9%%
