--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-05 16:32:15
+lastsearch = 2024-08-05 18:16:54
 
 [www.diepxuan.com]
-match = 4.5%%
-title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = 13.6%%
@@ -43,8 +43,8 @@ url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28
 
 [www.sendo.vn]
 match = -90.9%%
-title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối ...
-url = https://www.sendo.vn/bo-ga-goi-chun.htm
+title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 Chất ...
+url = https://www.sendo.vn/bo-ga-goi-ni-nhung-coco-in-noi-hoa-tiet-mau-moi-2023-chat-lieu-day-dan-mem-min-am-ap-cao-cap-giu-nhiet-tot-116242919.html
 
 [demxanh.com]
 match = -45.5%%
