--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-05 02:39:17
+lastsearch = 2024-08-05 18:24:13
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -337,7 +337,7 @@ title =
 url = https://www.bernama.com/en/news.php?id=2290107
 
 [financialservices.gov.in]
-match = -129.4%%
-title = Okaeri zettai kareshi lyrics to happy [2cEwWJ]
-url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://xn----24-q4dw1abpaqg5au.xn--p1ai/5647891bsein6fe80j
+match = -17.6%%
+title = Lokesh deopura [ox6edb]
+url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://xn----8sbwhcgscfiy8e.xn--p1ai/8475936wwwecopresentsrua5fe43y
 
