--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-05 15:25:29
+lastsearch = 2024-08-05 18:19:01
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -18,12 +18,12 @@ url = http://nemxinh.net/thuong-hieu/thang-loi
 
 [shopee.vn]
 match = -80.0%%
-title = chăn ga thắng lợi giá tốt Tháng 8, 2024 Chăn, Ga, Gối & ...
+title = chăn ga thắng lợi giá tốt Tháng 8, 2024 Chăn, Ga, Gối & Nệm
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 0.0%%
 title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html?srsltid=AfmBOorveweZSgSBNlrPo5uMyn7ZGJAa0nrfOm9cj376-Yz6oFGIYI_K
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOopcjTAgKN8e4kNq4LA9QGhsa7IDaiUiJM8K2b981TC9Pfpk_LgB
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
