--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-05 15:27:13
+lastsearch = 2024-08-05 18:28:01
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -200.0%%
-title = Justin Chun - Irvine, California, United States
-url = https://www.linkedin.com/in/justin-chun-b9aa732b3
+match = -7.7%%
+title = David Cohn - Subtext
+url = https://www.linkedin.com/in/davidjcohn
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -69.2%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -50.0%%
+title = Bing Ren
+url = https://profiles.ucsd.edu/bing.ren
 
 [www.mtech.edu]
 match = -61.5%%
