--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-05 15:21:21
+lastsearch = 2024-08-05 18:24:58
 
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOorUealsP63eJiM3LwQ_AdS_j069q8ndchnrByK4vE1RJdsESFXd
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html?srsltid=AfmBOor6Up3k7ypoR_-0gz-jTYzuFVDU4RCwLMjYT6oeoFfuPDPUOc2p
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOoqpW9CJlUz-pMz-vSAvb1e_7SEY77XSWNy87doDSNZIqjC5TtJd
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -27,8 +27,8 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatlongthai.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [shopee.vn]
-match = -45.5%%
-title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
+match = -50.0%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatthuynguyet.com]
