--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-05 16:13:36
+lastsearch = 2024-08-05 18:39:46
 
 [vnexpress.net]
 match = -128.6%%
@@ -12,9 +12,9 @@ title = Du lịch BÀ RỊA VŨNG TÀU 2024: top 18 địa điểm phải trải
 url = https://vnexpress.net/cam-nang-du-lich-ba-ria-vung-tau-4479713.html
 
 [vielimousine.com]
-match = -100.0%%
-title = Kinh Nghiệm Tham Quan Và Khám Phá Ngọn Hải Đăng ...
-url = https://vielimousine.com/tin-tuc/ngon-hai-dang-vung-tau.html
+match = -23.8%%
+title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
+url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
 match = -61.9%%
@@ -47,8 +47,8 @@ title = Côn Đảo khai mạc đường hoa, khu vui Xuân và ẩm thực ...
 url = https://www.baobariavungtau.com.vn/du-lich/202402/con-dao-khai-mac-duong-hoa-khu-vui-xuan-va-am-thuc-xuan-1003168/index.htm
 
 [www.etrip4u.com]
-match = -71.4%%
-title = Những địa điểm du lịch ở Vũng Tàu siêu đẹp nên biết
+match = -52.4%%
+title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
@@ -187,9 +187,9 @@ title = "Điểm mặt" 37 địa điểm du lịch đẹp nhất ở Vũng Tàu
 url = https://www.linkedin.com/pulse/nhung-dia-diem-du-lich-dep-nhat-o-vung-tau-nguyen-thien
 
 [www.vietnambooking.com]
-match = -109.5%%
-title = Combo Vũng Tàu 3 ngày 2 đêm khách sạn + vé máy bay ...
-url = https://www.vietnambooking.com/combo/combo-vung-tau-3-ngay-2-dem.html
+match = -95.2%%
+title = Gợi ý lịch trình Du lịch Vũng Tàu lễ 2/9 trong 2 ngày 1 đêm
+url = https://www.vietnambooking.com/du-lich/trai-nghiem/du-lich-le-29-goi-y-lich-trinh-kham-pha-vung-tau-trong-2-ngay-1-dem.html
 
 [www.24h.com.vn]
 match = -100.0%%
