--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-05 10:51:48
+lastsearch = 2024-08-05 18:41:51
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác em bé
 url = https://shopee.vn/Chiếu-lác-em-bé-i.298458938.4550748407
 
 [www.youtube.com]
-match = -137.5%%
-title = "Mục sở thị" vườn cây cảnh bạc tỷ rộng 3 ha | VTC16
-url = https://www.youtube.com/watch?v=KBEvg9f6rxA
+match = -168.8%%
+title = Build Team Và Đánh Giá Sức Mạnh Các Đội Hình Sư Thừa
+url = https://www.youtube.com/watch?v=AaGBxJ81VAY
 
 [hawater.com.vn]
 match = -75.0%%
@@ -352,9 +352,9 @@ title = Bàn đạp phanh ô tô rung lắc phải làm sao?
 url = http://baoyenbai.com.vn/227/325068/Ban-dap-phanh-o-to-rung-lac-phai-lam-sao.aspx
 
 [atgt.baogiaothong.vn]
-match = -187.5%%
-title = Người dân khiêng xe cứu người phụ nữ mắc kẹt dưới gầm ô tô
-url = https://atgt.baogiaothong.vn/nguoi-dan-khieng-xe-cuu-nguoi-phu-nu-mac-ket-duoi-gam-o-to-192240723160306417.htm
+match = -225.0%%
+title = Nhiều xe máy "lạc lối" trên Đại lộ Thăng Long, tẩu thoát bất ...
+url = https://atgt.baogiaothong.vn/nhieu-xe-may-lac-loi-tren-dai-lo-thang-long-tau-thoat-bat-thanh-khi-gap-csgt-192240805153453176.htm
 
 [cafebiz.vn]
 match = -200.0%%
@@ -627,9 +627,9 @@ title = Thông tin lễ viếng, lễ truy điệu Tổng Bí thư Nguyễn Phú
 url = https://hoabinhtv.vn/chinh-tri/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu-nguyen-phu-trong-tai-que-nha
 
 [media.chinhphu.vn]
-match = -256.2%%
-title = Thông tin lễ viếng, lễ truy điệu Tổng Bí thư Nguyễn Phú Trọng ...
-url = https://media.chinhphu.vn/thong-tin-le-vieng-le-truy-dieu-tong-bi-thu-nguyen-phu-trong-tai-que-nha-102240724151112475.htm
+match = -225.0%%
+title = Xử lý hơn 30.000 vụ liên quan đến gian lận thương mại trong ...
+url = https://media.chinhphu.vn/xu-ly-hon-30000-vu-lien-quan-den-gian-lan-thuong-mai-trong-7-thang-dau-nam-102240805174313204.htm
 
 [loichuahomnay.vn]
 match = -143.8%%
