--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-05 16:33:37
+lastsearch = 2024-08-05 18:38:25
 
 [mungmocmien.com]
 match = 77.8%%
@@ -12,9 +12,9 @@ title = Mùng khung
 url = https://mungmocmien.com/collections/mung-khung-man-khung
 
 [easydream.vn]
-match = -255.6%%
-title = CÁC LOẠI MÀN KHUNG XẾP GỌN THÔNG MINH ĐẸP
-url = https://easydream.vn/man-khung-xep-gon-4-11.html
+match = -422.2%%
+title = Màn Khung Không Khoan Tường GIÁ RẺ CHẤT ... - easy dream
+url = https://easydream.vn/man-khung-dep-khong-khoan-tuong-thu-xep-gon-day-keo-rong-roc-mung-ngu-hien-dai-cac-loai-145-15.html
 
 [mankhung.com]
 match = -422.2%%
@@ -62,8 +62,8 @@ title = Sayamah Bawi Cuang - Kan Thlarau A Man Khung Zia
 url = https://www.youtube.com/watch?v=uxvzxttIxUI
 
 [www.tripadvisor.com]
-match = -344.4%%
-title = Màn khung - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+match = -322.2%%
+title = Tod Man Khung 240B - Baan Khanitha Thai Cuisine
 url = https://www.tripadvisor.com/LocationPhotoDirectLink-g293916-d1053484-i140605035-Baan_Khanitha_Thai_Cuisine-Bangkok.html
 
 [remduongthao.com]
@@ -72,9 +72,9 @@ title = Mẫu Màn Khung Xếp Gọn Thông Minh ...
 url = https://remduongthao.com/man-khung/man-khung-xep-gon/
 
 [www.instagram.com]
-match = -500.0%%
-title = Simon Khung | “You never know what you have until you lose ...
-url = https://www.instagram.com/simonboyyyyyyy/reel/C6v8aBLhBFT/
+match = -366.7%%
+title = Simon Khung | Man need clothes, Car need wrap! ...
+url = https://www.instagram.com/simonboyyyyyyy/p/C8tsJe4BqAK/
 
 [www.flickr.com]
 match = -11.1%%
@@ -125,4 +125,14 @@ url = https://www.unesco.org/en/memory-world/stone-inscriptions-tsogtu-khung-tai
 match = 100.0%%
 title = Man Khung
 url = https://xaydungvuongphat.com/man-khung-xep-mau-10
+
+[clarkathletics.com]
+match = -211.1%%
+title = Conor Khung - 2022 - Men's Lacrosse
+url = https://clarkathletics.com/sports/mens-lacrosse/roster/conor-khung/1327
+
+[www.bible.com]
+match = -400.0%%
+title = TIRHKOHTE 5:18 an man a, vântlâng tân inah an khung a.
+url = https://www.bible.com/bible/1048/ACT.5.18.MIZO
 
