--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-05 17:00:25
+lastsearch = 2024-08-05 18:26:14
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+match = 23.8%%
+title = Điệp Xuân Vỏ gối EP1727 45x65
+url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html?srsltid=AfmBOor4r9VT4qtH94N4VF2W-P6MvIcTYbL0MU1pd0I2GXgxmIQYebo1
 
 [tiki.vn]
 match = -81.0%%
