--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -12,9 +12,9 @@ title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
-match = 14.8%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -33.3%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [shopee.vn]
 match = 18.5%%
@@ -57,9 +57,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [www.youtube.com]
-match = -55.6%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -7.4%%
+title = DANG DỞ - NAL | OFFICIAL MUSIC VIDEO
+url = https://www.youtube.com/watch?v=-ddYMCa_58o
 
 [sieuthidem.vn]
 match = 22.2%%
@@ -67,9 +67,9 @@ title = Bộ chiếu điều hoà Tencel TC05 - Hà Nội
 url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc05/
 
 [fptshop.com.vn]
-match = -29.6%%
-title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
-url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105?srsltid=AfmBOoo-EHNqGCaRZvWmdf1QazXLeqzTOA0GLeiyCpKB1IABQh70lNNq
+match = 0.0%%
+title = 
+url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [happynest.vn]
 match = -3.7%%
@@ -109,7 +109,7 @@ url = https://dienmaycholon.com/may-lanh
 [www.lazada.vn]
 match = 37.0%%
 title = BỘ CHIẾU ĐIỀU HÒA MỀM MÁT, NẰM ...
-url = https://www.lazada.vn/products/bo-chieu-dieu-hoa-mem-mat-nam-duoc-ca-bon-mua-cho-gia-dinh-tang-kem-2-vo-goi-nam-chat-lieu-100-may-cao-cap-thoang-khi-khong-kich-ung-da-kich-thuoc-162m-182m-222m-chieu-truc-chieu-tre-mem-mat-trai-giuong-trai-san-da-nang-i557344299.html
+url = https://www.lazada.vn/products/bo-chieu-dieu-hoa-mem-mat-nam-duoc-ca-bon-mua-cho-gia-dinh-tang-kem-2-vo-goi-nam-chat-lieu-100-may-cao-cap-thoang-khi-khong-kich-ung-da-kich-thuoc-162m-182m-222m-chieu-truc-chieu-tre-mem-mat-trai-giuong-trai-san-da-nang-i557344299.html?srsltid=AfmBOop-waeKlo-BYwHqeK43E9_SJCAiQ12rNjfNibRzVIvHI8CWAaWH
 
 [flying15.org.uk]
 match = -140.0%%
@@ -155,4 +155,9 @@ url = https://chanragoinemngockhue.com/chieu-dieu-hoa-khong-men
 match = -25.9%%
 title = Chiếu điều hoà là gì? Nằm chiếu điều hoà có tốt không?
 url = https://nemhana.com/chieu-dieu-hoa/
+
+[voicon.net]
+match = -22.2%%
+title = Bộ chiếu gối điều hòa cao cấp - CỬA HÀNG MẸ VÀ BÉ ...
+url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
 
