--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-04 23:27:37
+lastsearch = 2024-08-05 18:36:18
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -710,4 +710,9 @@ url = https://thuvienphapluat.vn/chinh-sach-phap-luat-moi/vn/ho-tro-phap-luat/ch
 match = -206.2%%
 title = Chiều tối và đêm 3/8: Nhiều khu vực có mưa lớn, đề phòng ...
 url = https://www.vietnamplus.vn/chieu-toi-va-dem-38-nhieu-khu-vuc-co-mua-lon-de-phong-lu-quet-post968571.vnp
+
+[nongnghiep.vn]
+match = -12.5%%
+title = Về miền chiếu cói Ngan Dừa
+url = https://nongnghiep.vn/ve-mien-chieu-coi-ngan-dua-i288576.html
 
