--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-05 14:18:09
+lastsearch = 2024-08-05 18:40:28
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
-url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
+match = -253.8%%
+title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
+url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -705,4 +705,9 @@ url = https://www.lazada.vn/tag/ga-ni-long/
 match = -115.4%%
 title = Habari Gani? (Or, What's the News?)
 url = http://www.historycolorado.org/story/seasonal/2022/12/16/habari-gani-or-whats-news
+
+[weather.interia.com]
+match = -161.5%%
+title = long-term weather forecast Dar Gani Gund
+url = https://weather.interia.com/long-term-forecast-dar-gani-gund,cId,577169
 
