--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-05 12:54:31
+lastsearch = 2024-08-05 18:41:32
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -127.8%%
+title = GIẦY KIDS - 🫓🫓🫓 Nem Nướng Phên - Đặc Sản Nha Trang ...
+url = https://m.facebook.com/58bngo.117.thai.ha/photos/-nem-nướng-phên-đặc-sản-nha-trang-em-lại-về-nem-nướng-phên-nha-trang-mời-các-bác/894242542749118/
 
 [thegioinem.com]
-match = -155.6%%
-title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
-url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -155.6%%
-title = Món Ngon Người Việt Houston | Mai thứ sáu 07/12/24 có ...
-url = https://www.facebook.com/groups/monngonnvh/posts/mai-thứ-sáu-071224-có-bún-nem-nướng-9bánh-bột-chiên-5chè-sương-sa-bánh-lọt-5bánh/26396130619978251/
+match = -127.8%%
+title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
+url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
 
 [eva.vn]
 match = -150.0%%
@@ -37,14 +37,14 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -144.4%%
+title = Quán nem nướng núp hẻm siêu ngon ở Gò Vấp, tuổi đời 12 ...
+url = https://www.tiktok.com/@reviewcungphuocnhe/video/7249391511442296069
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -150.0%%
+title = Nem Nướng Theo Cách Này Dù Không Dùng Mỡ Mà Vẫn Béo ...
+url = https://www.youtube.com/watch?v=aVTZUMebQ4M
 
 [www.kymdan.com]
 match = -166.7%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/p/CGJhaWPgssh/
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopxb-w-MbPsTIJbupMHY1eQWQvUpDLzkc6GxczOmKczqg8UaWc7
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [nemphuoclong.vn]
 match = -83.3%%
