--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-05 13:01:04
+lastsearch = 2024-08-05 18:38:02
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -38.9%%
+title = Smartcore Pro Burbank Oak Lvp
+url = https://www.tiktok.com/discover/smartcore-pro-burbank-oak-lvp
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+match = -100.0%%
+title = Người Việt ở Seattle | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
+url = https://m.facebook.com/groups/nguoivietseattle.usa/posts/2080619245611358/
 
 [emartmall.com.vn]
 match = 0.0%%
