--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-05 12:56:35
+lastsearch = 2024-08-05 18:45:07
 
 [demxanh.com]
 match = -18.5%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 63.0%%
-title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+match = 11.1%%
+title = Điệp Xuân Chiếu trúc trung quốc
+url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
 match = -18.5%%
