--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-05 18:14:45
+lastsearch = 2024-08-05 20:01:29
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCw6Fpqh&sig=ACfU3U3-PO0apmVBLaNFsvRgehC4AYb2Zw&hl=en&sa=X&ved=2ahUKEwi515KjnN2HAxVjFlkFHaoaDlsQ6AF6BAgZEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCw9yvvp&sig=ACfU3U1IMB7E6Jk1SRDUQ9YN7t5YrhDW2Q&hl=en&sa=X&ved=2ahUKEwjqsKi09N2HAxUkI0QIHWrLJ_wQ6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
