--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-05 18:38:02
+lastsearch = 2024-08-05 20:04:33
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -38.9%%
-title = Smartcore Pro Burbank Oak Lvp
-url = https://www.tiktok.com/discover/smartcore-pro-burbank-oak-lvp
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -185,4 +185,9 @@ url = https://didaudodi.com/nem-ngu/nem-trekking-tu-bom-hoi-sieu-nhe-naturehike-
 match = -150.0%%
 title = Book Xo Xon Homestay (Kon Tum) - 2020 PRICES FROM A$14!
 url = https://www.agoda.com/en-au/xo-xon-homestay/hotel/kon-tum-vn.html
+
+[www.nguoi-viet.com]
+match = -22.2%%
+title = Cách làm nem nướng thơm ngon
+url = https://www.nguoi-viet.com/nvtv-doi-song/nvtv-nguoi-viet-bep-viet/nem-nuong/
 
