--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-05 12:43:24
+lastsearch = 2024-08-05 20:08:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối đệm happy
 url = https://www.facebook.com/Changaxuattaikho/
 
 [shopee.vn]
-match = -46.4%%
-title = [SP mới] Bộ ga gối poly cotton ga kí túc xá kích thước ...
-url = https://shopee.vn/-SP-mới-Bộ-ga-gối-poly-cotton-ga-kí-túc-xá-kích-thước-80x190cm-drap-nệm-ga-giường-đơn-ga-chun-trải-giường-i.483546614.20369429874
+match = -32.1%%
+title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
 
 [chandem.com.vn]
 match = 17.9%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 0.0%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOopdxeO6DOOBZgkNdyVnwzop0z0M6EsOd9fV8n_sLsBhCYxULrIL
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOooy7JMkh7LXhvw54UgsYiUy1m30D6efYfDZ-3k2xXDAJBY1Ia7W
 
 [thegioinem.com]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon EPC 23048
 url = http://everonhanquoc.vn/everon/13832/bo-chan-ga-goi-everon-epc-23048
 
 [hanvico.com.vn]
-match = -100.0%%
-title = Chăn Ga Gối
-url = https://hanvico.com.vn/danh-muc/chan-ga-goi/
+match = 38.5%%
+title = Bộ ga chun My Youth - MY16
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my16/
 
 [everonvn.com.vn]
 match = 17.4%%
