--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-05 14:26:17
+lastsearch = 2024-08-05 20:01:51
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -26.7%%
+title = Vesta Lifestyle & Gifts
+url = https://www.facebook.com/VestaLifestyle/
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
@@ -415,4 +415,9 @@ url = https://online.hvnh.edu.vn/public/tracuuthoikhoabieu
 match = -180.0%%
 title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
 url = https://masterisehomes.com/lumiere-boulevard/vn/project
+
+[hnue.edu.vn]
+match = -7.7%%
+title = Bản đồ Trường
+url = https://hnue.edu.vn/gioithieu/bandotruong
 
