--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-05 14:48:54
+lastsearch = 2024-08-05 20:00:03
 
 [shopee.vn]
 match = 19.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spi
 [www.diepxuan.com]
 match = 58.1%%
 title = Chiếu nhựa Thái Bình GT 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html?srsltid=AfmBOopqq2WPezLlji0nGK8arGsZaz6FpFQpwVhTI8ULLC2_fIUtI48K
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 
 [m.facebook.com]
 match = -6.5%%
